--- a/movies/src/css/Favorites.css
+++ b/movies/src/css/Favorites.css
@@ -7,9 +7,12 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   justify-items: center;
-  margin: 21px;
+  justify-content: center;
+  gap: 3rem;
+  margin: 0 auto;
   width: 100%;
   max-width: 1200px;
+
 }
 
 .favorites-container {
